# dependent-todos

./: .gitignore  AGENTS.md  README.md  pyproject.toml  todos.toml
.github/workflows/: ci.yml
.opencode/plan/: 01_overview.md  03_cli_interface.md  04_technical_decisions.md  05_implementation_phases.md  06_design_decisions.md  07_implementation_notes.md  08_next_steps.md  10_improvements.md  detailed-design.md  graphlib-analysis.md  initial.md
logs/: session_tui_refactoring.md
plan/: 02_architecture.md  05_implementation_phases.md  08_next_steps.md  09_test_setup.md  10_improvements.md  11_keybindings_and_scopes.md  12_view_the_dependency_as_widget.md  13_select_dependencies_on_add_and_update_todo.md  14_fix_issues.md  14_refactor_keybindings.md  15_refactor_keybindings.md  16_adapt_filters_tui.md  dependency_tree_fix_plan.md  detailed-design.md  refactor_plan.md  textual_context7
src/dependent_todos/: __init__.py  config.py  constants.py  dependencies.py  main.py  models.py  storage.py  styles.css  tui.py  utils.py
tests/: conftest.py  test_cli.py  test_models.py  test_tui.py  test_tui_widgets.py  test_utils.py
tests/__snapshots__/test_tui/: test_add_task_modal_snapshot.raw  test_delete_task_modal_snapshot.raw  test_initial_screen_snapshot.raw  test_update_task_modal_snapshot.raw
tests/__snapshots__/test_tui_widgets/: test_modal_snapshot.raw
