[project]
name = "dependent-todos"
version = "0.1.0"
description = "A cli/tui to dependent todo management"
readme = "README.md"
authors = [
    { name = "PonyM", email = "dev@lksch.ch" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dependent-todos = "dependent_todos:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
