[project]
name = "dependent-todos"
version = "0.1.0"
description = "A cli/tui to dependent todo management"
readme = "README.md"
authors = [
    { name = "PonyM", email = "dev@lksch.ch" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "tomli-w>=1.0.0",
    "simple-term-menu>=1.6.0",
]

[project.scripts]
dependent-todos = "dependent_todos:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
